agents/allow-egress-to-mqtt.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-mqtt
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: sqlite
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 3.129.21.182/32
    ports:
    - protocol: TCP
      port: 1883
